# haskell-fun-times

./: README.md  build-github-pages.sh  cis-194.html  from-first-principles.html  index.html  learn-you-a-haskell.html  typeclassopedia.html
cis-194/: 01_Introduction-to-Haskell.hs  04_Higher-Order-Programming.hs  06_Laziness.hs
cis-194/02_Algebraic-Data-Types/: Log.hs  LogAnalysis.hs
cis-194/02_Algebraic-Data-Types/Log/: Analysis.hs  Base.hs
cis-194/03_Recursion-patterns-Polymorphism-Prelude/: Golf.hs
cis-194/05_Type-Classes/: Calc.hs
codewars/: ConsecutiveKPrimes.hs  DataTypesALaCarte.hs  MillionthFibonacci.hs  PowerSet.hs  RangeExtractor.hs  Wildcards.hs
css/: custom.css
from-first-principles/: README.md  misc.md
from-first-principles/01_Lambda-Calculus/: README.md
from-first-principles/05_Types/: README.md
from-first-principles/06_Typeclasses/: README.md  deriving_eq.hs
from-first-principles/07_More-Functional-Patterns/: Funcy.hs  README.md
from-first-principles/08_Recursion/: README.md
from-first-principles/09_Lists/: ZippingLists.hs
from-first-principles/10_Folding-Lists/: CustomFolds.hs  DatabaseProcessing.hs  README.md  WarmUp.hs
from-first-principles/11_Algebraic-Datatypes/: AsPatterns.hs  BinaryTree.hs  HuttonsRazor.hs  LanguageExercises.hs  LogicGoats.hs  Phone.hs  Programmers.hs  README.md
from-first-principles/12_Signaling-Adversity/: BinaryTree.hs  MyEither.hs  MyMaybe.hs  Natural.hs  README.md  StringProcessing.hs  Unfold.hs  ValidateWord.hs
from-first-principles/13_Building-Projects/hangman/: LICENSE  hangman.cabal
from-first-principles/13_Building-Projects/hangman/src/: Main.hs
from-first-principles/14_Testing/: Babby.hs  README.md
from-first-principles/14_Testing/addition/: Addition.hs  addition.cabal
from-first-principles/14_Testing/exercises/: QuickCheckTesting.hs  WordNumberTest.hs  exercises.cabal
from-first-principles/14_Testing/morse/: morse.cabal
from-first-principles/14_Testing/morse/app/: Main.hs
from-first-principles/15_Monoids-and-Semigroups/: AnotherMaybeMonoid.hs  BadMonoid.hs  MonoidExercises.hs  README.md  SemigroupExercises.hs
from-first-principles/16_Functor/: FunctorQuickCheck.hs  README.md  ReinventTheWheel.hs
from-first-principles/17_Applicative/: Combinations.hs  Identity.hs  IdentityConstant.hs  Instances.hs  QuickChecking.hs  README.md  TypeCheck.hs  Validation.hs  ZipList.hs
from-first-principles/18_Monad/: EitherMonad.hs  Funcs.hs  Instances.hs  README.md
from-first-principles/19_Applying-Structure/: README.md
from-first-principles/1_Lambda-Calculus/: README.md
from-first-principles/20_Foldable/: Filter.hs  Instances.hs  LibraryFuncs.hs  README.md
from-first-principles/21_Traversable/: QuickChecker.hs  README.md
from-first-principles/22_Reader/: README.md  ReaderPractice.hs  ReaderTypes.hs
from-first-principles/23_State/: Moi.hs  README.md  RandomExample.hs  RandomExampleV2.hs
from-first-principles/24_Parser-Combinators/: AltParsing.hs  DataIni.hs  Dot.hs  IPv4.hs  Integer.hs  LearnParsers.hs  Phone.hs  PosInt.hs  README.md  SemVer.hs  TextFractions.hs  TryTry.hs
from-first-principles/24_Parser-Combinators/logfile/: logfile.cabal  stack.yaml
from-first-principles/24_Parser-Combinators/logfile/src/Data/: Log.hs
from-first-principles/24_Parser-Combinators/logfile/test/: Spec.hs
from-first-principles/25_Composing-Types/: Bifunctor.hs  ComposeApplicative.hs  README.md
from-first-principles/26_Monad-Transformers/: EitherT.hs  FixTheCode.hs  HitCounter.hs  Hypothetical.hs  OuterInner.hs  README.md  ReaderT.hs  Scotty.hs  StateT.hs  WriteTheCode.hs
from-first-principles/26_Monad-Transformers/morra/: README.md  morra.cabal
from-first-principles/26_Monad-Transformers/morra/src/: Main.hs
from-first-principles/27_Non-strictness/: README.md
from-first-principles/28_Basic-libraries/: DList.hs  Queue.hs  README.md  bench.hs
from-first-principles/29_IO/: README.md
from-first-principles/2_Hello-Haskell/: README.md
from-first-principles/30_When-Things-Go-Wrong/: Async.hs  CustomExceptions.hs  README.md  StoppingTheParty.hs
from-first-principles/31_Final-Project/: .gitignore  README.md  fingerd.cabal
from-first-principles/31_Final-Project/app/: AddUser.hs  Debug.hs  Server.hs
from-first-principles/31_Final-Project/src/: Debug.hs  FingerD.hs  Main.hs
from-first-principles/4_Basic-Datatypes/: README.md
from-first-principles/5_Types/: README.md  type_kwon_do.hs
from-first-principles/6_Typeclasses/: README.md  type_kwon_do.hs
from-first-principles/7_More-Functional-Patterns/: README.md
from-first-principles/8_Recursion/: WordNumber.hs  exercises.hs
from-first-principles/9_Lists/: Better.hs  Cipher.hs  FearfulSymmetry.hs  MyStandard.hs  PoemLines.hs  README.md
helloworld/: helloworld.cabal
learn-you-a-haskell/: NewType.hs  Record.hs  Truthy.hs
learn-you-a-haskell/io/: nospaces.hs
learn-you-a-haskell/monad/: CustomMonad.hs  Knight.hs  MiscFuncs.hs  RandomState.hs  Writer.hs
learnyouahaskell/: Exceptions.hs  Foldable.hs  Geometry.hs  Kinds.hs  README.md  Rando.hs  playground.hs
learnyouahaskell/io/: cli.hs  files.hs  sequence.hs
learnyouahaskell/monad/: CustomState.hs  Knight.hs  MonadPlus.hs  Reader.hs  State.hs  Writer.hs
learnyouahaskell/problems/: PolishCalculator.hs
learnyouahaskell/zipper/: FileSystem.hs  MaybeZips.hs  Zippers.hs
playground/: BinaryTree.hs  ByteString.hs  Either.hs  Exceptions.hs  Infix.hs  Monad.hs  Monoid.hs  Record.hs  TrafficLight.hs  TypeClasses.hs  double.hs  playground.hs
playground/Geometry/: Cuboid.hs  Sphere.hs
playground/functor/: ApplicativeFunctor.hs  Functor.hs
playground/io/: maps.hs  reverse.hs  trickKaty.hs
playground/monad/: Monad.hs
playground/problems/: HeathrowToLondon.hs
playground/scripting/: README.md  fsnotify.hs  hello.hs  history.hs
playground/todo/: todo  todo.hs
typeclassopedia/: README.md
typeclassopedia/3.2_Functor_Instances/: exercises.hs
typeclassopedia/3_Functor/: 3.2_Instances.hs  3.3_Laws.hs  README.md
typeclassopedia/4_Applicative/: README.md
(+8 files in other folders)
