name:                fingerd
version:             0.1.0.0
homepage:            https://github.com/SamTay/haskell-fun-times/from-first-principles/31-Final_Project#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@gmail.com
copyright:           2017 Sam Tay
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      app
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , fingerd
                     , network

executable server
  ghc-options:         -Wall
  hs-source-dirs:      app
  main-is:             Server.hs
  build-depends:       base >= 4.7 && < 5
                     , fingerd

executable adduser
  ghc-options:         -Wall
  hs-source-dirs:      app
  main-is:             AddUser.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , fingerd
                     , raw-strings-qq
                     , sqlite-simple
                     , text

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     FingerD
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text
