name:                addition
version:             0.1.0.0
synopsis:            Simple project template from stack
license:             BSD3
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@gmail.com
copyright:           2016 Sam Tay
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  ghc-options:         -Wall -fwarn-tabs
  exposed-modules:     Addition
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
