name:                logfile
version:             0.0.0.1
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Log
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , parsers
                     , time
  default-language:    Haskell2010

test-suite logfile-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , logfile
                     , time
                     , trifecta
                     , QuickCheck
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SamTay/logfile
